<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3EC8C8"
    tools:context=".ContadoresActivity">


    <TextView
        android:id="@+id/boton1"
        style="@style/botonContador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contador1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/contador1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <TextView
        android:id="@+id/boton2"
        style="@style/botonContador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/contador2"
        app:layout_constraintEnd_toStartOf="@+id/contador2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton1" />

    <TextView
        android:id="@+id/incremento1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/incremento"
        app:layout_constraintEnd_toStartOf="@+id/numIncremento1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/boton1"
        app:layout_constraintTop_toBottomOf="@+id/boton1" />

    <TextView
        android:id="@+id/contador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="4dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/boton1"
        app:layout_constraintEnd_toStartOf="@+id/borrar1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton1"
        app:layout_constraintTop_toTopOf="@+id/boton1" />

    <TextView
        android:id="@+id/contador2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:padding="4dp"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/boton2"
        app:layout_constraintEnd_toStartOf="@+id/borrar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/boton2"
        app:layout_constraintTop_toTopOf="@+id/boton2" />

    <ImageView
        android:id="@+id/borrar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="@+id/boton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/contador1"
        app:layout_constraintTop_toTopOf="@+id/boton1" />

    <EditText
        android:id="@+id/numIncremento1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:inputType="number"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="@+id/incremento1"
        app:layout_constraintEnd_toEndOf="@+id/borrar1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/incremento1"
        app:layout_constraintTop_toTopOf="@+id/incremento1" />

    <EditText
        android:id="@+id/numIncremento2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:inputType="number"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="@+id/incremento2"
        app:layout_constraintEnd_toEndOf="@+id/borrar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/incremento2"
        app:layout_constraintTop_toTopOf="@+id/incremento2" />

    <TextView
        android:id="@+id/incremento2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/incremento"
        app:layout_constraintEnd_toStartOf="@+id/numIncremento2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/boton2"
        app:layout_constraintTop_toBottomOf="@+id/boton2" />

    <TextView
        android:id="@+id/global"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/global"
        app:layout_constraintEnd_toStartOf="@+id/globalnum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/boton2"
        app:layout_constraintTop_toBottomOf="@+id/boton2" />

    <ImageView
        android:id="@+id/borrar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="@+id/boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/contador2"
        app:layout_constraintTop_toTopOf="@+id/boton2" />

    <TextView
        android:id="@+id/globalnum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="0"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/global"
        app:layout_constraintEnd_toStartOf="@+id/borrar3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/global"
        app:layout_constraintTop_toTopOf="@+id/global" />


    <ImageView
        android:id="@+id/borrar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintBottom_toBottomOf="@+id/global"
        app:layout_constraintEnd_toEndOf="@+id/borrar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/globalnum"
        app:layout_constraintTop_toTopOf="@+id/global" />

</androidx.constraintlayout.widget.ConstraintLayout>